Update evaluate notebook

--- a/evaluate_predictions_outputs.ipynb
+++ b/evaluate_predictions_outputs.ipynb
@@ -566,25 +566,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-50.8942435116\n"
+      "-50.4287588745\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import explained_variance_score\n",
     "\n",
-    "pred = 'orthogonal_matching_pursuit_filtered.csv'\n",
-    "\n",
-    "predictions = pd.read_csv('predictions/'+pred,low_memory=False)\n",
-    "\n",
-    "print explained_variance_score(df, predictions)*100\n"
+    "def eval(output):\n",
+    "    \n",
+    "    predictions = pd.read_csv('predictions/'+output,low_memory=False)\n",
+    "    print explained_variance_score(df, predictions)*100\n",
+    "eval('passive_aggressive_filtered.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-50.9039054595\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval('bayesian_ridge_filtered.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-49.989390642\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval('ransac_filtered.csv')"
    ]
   },
   {
